--- a/ProjetML.ipynb
+++ b/ProjetML.ipynb
@@ -3346,7 +3346,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Comparison of RANSAC with Baseline Models"
+        "## Comparison of RF with Baseline Models"
       ],
       "metadata": {
         "id": "t0CS9jXVz6rt"
